--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   springapp:
-    image: shidono/tpachat
+    image: tpachat
     ports:
       - "8089:8089"
     networks:
