--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 			<version>1.8.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>sp.sd</groupId>
+    <artifactId>nexus-artifact-uploader</artifactId>
+    <version>2.13</version>
+</dependency>
 	</dependencies>
 
 	<build>
